--- a/src/static/css/include/base.css
+++ b/src/static/css/include/base.css
@@ -429,7 +429,7 @@ th {
 /* LAYOUT STYLES */
 body {
   color: #666;
-  background: #fafafa url(../img/body-bg.jpg) 0 0 repeat;
+  background: #fafafa url(../../img/body-bg.jpg) 0 0 repeat;
 }
 
 p {
@@ -447,7 +447,7 @@ header {
   padding-top: 40px;
   padding-bottom: 40px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #2e7bcf url(../img/header-bg.jpg) 0 0 repeat-x;
+  background: #2e7bcf url(../../img/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
 }
 
@@ -500,7 +500,7 @@ aside#sidebar {
   padding-left: 20px;
   font-size: 12px;
   line-height: 1.3;
-  background: transparent url(../img/sidebar-bg.jpg) 0 0 no-repeat;
+  background: transparent url(../../img/sidebar-bg.jpg) 0 0 no-repeat;
 }
 
 aside#sidebar p.repo-owner,
@@ -530,7 +530,7 @@ header a.button {
   position: absolute;
   top: 0;
   right: 0;
-  background: transparent url(../img/github-button.png) 0 0 no-repeat;
+  background: transparent url(../../img/github-button.png) 0 0 no-repeat;
 }
 aside a.button {
   display: block;
@@ -538,7 +538,7 @@ aside a.button {
   padding-left: 64px;
   margin-bottom: 20px;
   font-size: 21px;
-  background: transparent url(../img/download-button.png) 0 0 no-repeat;
+  background: transparent url(../../img/download-button.png) 0 0 no-repeat;
 }
 
 code, pre {
