--- a/src/static/css/include/base.css
+++ b/src/static/css/include/base.css
@@ -445,7 +445,7 @@ a:hover {
 
 header {
   padding-top: 40px;
-  padding-bottom: 40px;
+  /*padding-bottom: 40px;*/
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   background: #2e7bcf url(../../img/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
