--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -3,6 +3,13 @@
 @import url( './include/base.css' );
 @import url( './include/common.css' );
 
+.noitems {
+    font-size: 14px;
+    font-weight: bold;
+    text-indent: 40px;
+    margin-bottom: 50px;
+}
+
 dl.cat {
     margin: 0 0 10px 0;
 }
@@ -83,5 +90,4 @@ dl.cat_item > dd a img {
 dl.cat_item .link {
     font-size: 14px;
 }
-
 
