--- a/src-webpack/include/script.html
+++ b/src-webpack/include/script.html
@@ -1,4 +1,11 @@
-<script src="../src-webpack/static/js/lib/jquery.js"></script>
-<script src="../src-webpack/static/js/lib/react-with-addons.min.js"></script>
-<script src="../src-webpack/static/js/lib/react-dom.js"></script>
+<!--
+
+<script src="//s0.qhimg.com/!415dd799/jquery.js"></script>
+<script src="//s2.qhimg.com/!39ea481e/react-with-addons.min.js"></script>
+<script src="//s4.qhimg.com/!8c151852/react-dom.js"></script>
+-->
+
+<script src="static/js/lib/jquery.js"></script>
+<script src="static/js/lib/react-with-addons.min.js"></script>
+<script src="static/js/lib/react-dom.js"></script>
 
