--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -3,6 +3,8 @@
 @import url( './include/base.css' );
 @import url( './include/common.css' );
 
+.tttttttt{}
+
 .noitems {
     font-size: 14px;
     font-weight: bold;
